# belorthography

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  setup.py
.github/workflows/: run-tests.yml  test-python.yml
python/: CHANGELOG  README.md  diff.py  pyproject.toml  requirements.txt
python/src/: diff.py
python/src/belorthography/: __init__.py  cases.py  diff_mode.py  engine.py  orthographies.py
python/src/belorthography/converters/: translit_cyr_nar_to_cyr_taras.py  translit_cyr_nar_to_lat.py  translit_cyr_taras_to_lat.py  translit_lat_to_lat_no_diactric.py  util.py
python/tests/: test_cyr_nar_to_cyr_taras.py  test_cyr_narcom_to_cyr.py  test_cyr_taras_to_lat.py  test_cyr_to_lat.py  test_unsupported.py
python/translit/: engine.py
python/translit/converters/: translit.py  translit_cyr_nar_to_lat.py  translit_cyr_narcom_to_cyr.py  translit_cyr_narcom_to_lat.py  translit_cyr_taras_to_lat.py  translit_cyr_to_cyr_narcom.py  translit_cyr_to_lat.py  translit_lat_to_cyr.py  translit_lat_to_cyr_narcom.py
tests/: README.md  alphabet.csv  basic.json  conflicts.csv.disabled  lacinka_buduchynja_article.json  test_1.json  various.csv
tests/cyr_narcom_to_cyr/: test_cyr_narcom_to_cyr.py
tests/cyr_narcom_to_cyr/test_cases/: test_1.json  test_2.json
tests/cyr_test_to_lat_test/: test_1.py
translit/: __init__.py  cases.py  engine.py
translit/converters/: translit.py  translit_cyr_narcom_to_cyr.py  translit_cyr_narcom_to_lat.py  translit_cyr_test_to_lat_test.py  translit_cyr_to_cyr_narcom.py  translit_cyr_to_lat.py  translit_lat_to_cyr.py  translit_lat_to_cyr_narcom.py
