[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "belorthography"
version = "0.0.1"
authors = [
  { name="Mikita Belahlazau", email="nikelandjelo@gmail.com" },
  { name="Aliaksandr Parfianiuk", email="frombrest@gmail.com" },
]
description = "Library for converting Belarusian text to different orthographies (e.g. lacinka)."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/belaudiobooks/lacinka"
"Bug Tracker" = "https://github.com/belaudiobooks/lacinka/issues"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = ["src"]